--- a/views/home.pug
+++ b/views/home.pug
@@ -1,2 +1,6 @@
-h1 Home is where your heart belongs
-p= paragraph
+include _head
+body
+  include _nav
+  h1 Home is where your heart belongs
+  p= paragraph
+  include _footer
