add compose page

--- a/views/home.pug
+++ b/views/home.pug
@@ -1,6 +1,6 @@
-include _head
+include _header
 body
-  include _nav
-  h1 Home is where your heart belongs
-  p= paragraph
-  include _footer
+  .container
+    h1 Home
+    p= paragraph
+include _footer
