--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,17 @@
+body{
+    position: relative;
+    height: 100%;
+    min-height: 100vh;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    padding-bottom: 90px;
+}
 .container-fluid {
     padding-top: 70px;
     padding-bottom: 70px;
+}
+a{
+    text-decoration: none;
 }
 .navbar {
     padding-top: 15px;
@@ -25,11 +36,11 @@
 	bottom: 0;
 	width: 100%;
 	height: 60px;
-	background-color: #1abc9c;
+    background-color: #1abc9c;
 }
 
 .footer p {
-	margin-top: 25px;
-	font-size: 12px;
-  color: #fff;
+    margin-top: 25px;
+    font-size: 12px;
+    color: #fff;
 }
