--- a/views/home.pug
+++ b/views/home.pug
@@ -3,4 +3,8 @@ body
   .container
     h1 Home
     p= paragraph
+    .container
+      each post in posts
+        h2= post.title
+
 include _footer
